<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable name="loginActivityNesnesi" type="com.maviay.pazaryeri.activities.LoginActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="230dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/amblem3x1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:scaleType="centerCrop"
            android:src="@drawable/pattern3x" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <ImageView
                android:layout_width="342dp"
                android:layout_height="100dp"
                android:layout_gravity="left"
                android:src="@drawable/amblem3x3"
                android:transitionName="splashLogo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/girisYap"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/kullaniciAdi"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutLoginKullanici"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_back"
                    android:textColorHint="@color/greyColor"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editKullanici"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_border"
                        android:ellipsize="end"
                        android:imeOptions="flagNavigateNext"
                        android:keepScreenOn="true"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:text="@string/kullaniciAdiVarsayilan"
                        android:textColor="#2740b0" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sifre"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutLoginPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_back"
                    android:textColorHint="@color/greyColor"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_border"
                        android:ellipsize="end"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="noExcludeDescendants"
                        android:inputType="textPassword"
                        android:keepScreenOn="true"
                        android:maxLength="17"
                        android:singleLine="true"
                        android:text="@string/sifreVarsayilan"
                        android:textColor="#2740b0" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnGirisYap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:height="65dp"
                    android:backgroundTint="@color/colorGreenButton"
                    android:onClick="@{() -> loginActivityNesnesi.buttonGirisYapTikla()}"
                    android:text="@string/girisYap"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSifremiUnuttum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> loginActivityNesnesi.txtSifremiUnuttumTikla()}"
                    android:text="@string/sifremiUnuttum"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="200dp"
                    android:layout_height="100dp" />

            </LinearLayout>
        </LinearLayout>

        <include
            layout="@layout/modal_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />

    </RelativeLayout>
</layout>