<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".activities.ForgetPasswordActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="230dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/amblem3x1" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:scaleType="centerCrop"
        android:src="@drawable/pattern3x" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/amblem3x3"
            android:transitionName="splashLogo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sifremiUnuttum"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/telefonNumarasi"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutForgetPasswordPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_back"
                android:textColorHint="@color/greyColor"
                app:hintEnabled="true">

                <br.com.sapereaude.maskedEditText.MaskedEditText
                    android:id="@+id/edtPhoneForgetPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_border"
                    android:ellipsize="end"
                    android:imeOptions="flagNavigateNext"
                    android:inputType="phone"
                    android:keepScreenOn="true"
                    android:maxLength="18"
                    android:singleLine="true"
                    android:textColor="#2740b0"
                    mask:allowed_chars="1234567890"
                    mask:mask="+90 (5##) ### ####" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSifreGonder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:height="65dp"
                android:backgroundTint="@color/colorGreenButton"
                android:text="@string/sifreyiGonder"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtYadaGirisYap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/yadaGiris"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Space
                android:layout_width="200dp"
                android:layout_height="100dp" />
        </LinearLayout>

    </LinearLayout>
    <include
    layout="@layout/modal_progress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true" />
</RelativeLayout>