<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="userActivityNesnesi" type="com.maviay.pazaryeri.activities.UserActivity" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/amblem3x1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:scaleType="centerCrop"
            android:src="@drawable/pattern3x" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <ImageView
                android:layout_width="342dp"
                android:layout_height="30dp"
                android:layout_gravity="left"
                android:src="@drawable/amblem3x3"
                android:transitionName="splashLogo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageKullanici"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:src="@drawable/amblem3x1"
                    android:transitionName="splashLogo" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kullaniciSayfasi"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/kullaniciAdi"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutLoginKullanici"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:padding="1dp"
                    android:background="@drawable/edittext_back"
                    android:textColorHint="@color/greyColor"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editKullanici"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:padding="1dp"
                        android:background="@drawable/edittext_border"
                        android:ellipsize="end"
                        android:imeOptions="flagNavigateNext"
                        android:keepScreenOn="true"
                        android:maxLength="40"
                        android:singleLine="true"
                        android:textSize="18sp"
                        android:textColor="#af40b0" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/ePosta"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutLoginEPosta"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:padding="1dp"
                    android:background="@drawable/edittext_back"
                    android:textColorHint="@color/greyColor"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editEPosta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:background="@drawable/edittext_border"
                        android:ellipsize="end"
                        android:imeOptions="flagNavigateNext"
                        android:keepScreenOn="true"
                        android:maxLength="30"
                        android:singleLine="true"
                        android:textSize="18sp"
                        android:textColor="#af40b0" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/adiSoyadi"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutLoginAdiSoyadi"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:padding="1dp"
                    android:background="@drawable/edittext_back"
                    android:textColorHint="@color/greyColor"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editAdiSoyadi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:background="@drawable/edittext_border"
                        android:ellipsize="end"
                        android:imeOptions="flagNavigateNext"
                        android:keepScreenOn="true"
                        android:maxLength="80"
                        android:singleLine="true"
                        android:textSize="18sp"
                        android:textColor="#af40b0" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnButunUrunler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:height="50dp"
                    android:backgroundTint="@color/colorGreenButton"
                    android:onClick="@{() -> userActivityNesnesi.buttonButunUrunlerTikla()}"
                    android:text="@string/butunUrunler"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnSecilenUrunler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:height="50dp"
                    android:backgroundTint="@color/colorGreenButton"
                    android:onClick="@{() -> userActivityNesnesi.buttonSecilenUrunlerTikla()}"
                    android:text="@string/secilenUrunler"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="200dp"
                    android:layout_height="10dp" />
            </LinearLayout>
        </LinearLayout>
        <include
            layout="@layout/modal_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</layout>