<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="secilenUrunlerActivityNesnesi" type="com.maviay.pazaryeri.activities.SecilenUrunlerActivity" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:scaleType="centerCrop"
            android:src="@drawable/pattern3x" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/secilenUrunler"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="#8f90f0"
                android:paddingStart="5dp"
                android:paddingEnd="25dp">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/aranacakUrun"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutAranacakUrun"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:layout_marginTop="5dp"
                    android:padding="1dp"
                    android:background="@drawable/edittext_back"
                    android:textColorHint="@color/greyColor"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editAranacakUrun"
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:padding="1dp"
                        android:background="@drawable/edittext_border"
                        android:ellipsize="end"
                        android:imeOptions="flagNavigateNext"
                        android:keepScreenOn="true"
                        android:maxLength="40"
                        android:singleLine="true"
                        android:textSize="14sp"
                        android:textColor="#af40b0" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="#8f90f0"
                android:paddingStart="5dp"
                android:paddingEnd="25dp">
                <TextView
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sayfadaUrun"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />
                <Spinner
                    android:id="@+id/spinnerAdet"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:backgroundTint="@color/colorGreen"
                    android:layout_alignBottom="@+id/txtVw" />

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="#8f90f0"
            android:paddingStart="5dp"
            android:paddingEnd="25dp">

            <Button
                android:id="@+id/buttonListele"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#6f5030"
                android:layout_weight="1"
                android:text="@string/listele" />
        </LinearLayout>
            <ListView
                android:id="@+id/secilen_urunler_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:divider="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="#8f90f0"
                android:paddingStart="5dp"
                android:paddingEnd="25dp">
                <Button
                    android:id="@+id/buttonIlkSayfa"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#6f5030"
                    android:layout_weight="1"
                    android:text="&lt;&lt;" />
                <Button
                    android:id="@+id/buttonOncekiSayfa"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#6f5030"
                    android:paddingLeft="2dp"
                    android:layout_weight="1"
                    android:text="&lt;" />
                <TextView
                    android:id="@+id/textSayfalar"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Sayfa: 1/1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />
                <Button
                    android:id="@+id/buttonSonrakiSayfa"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#6f5030"
                    android:layout_weight="1"
                    android:text="&gt;" />
                <Button
                    android:id="@+id/buttonSonSayfa"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#6f5030"
                    android:layout_weight="1"
                    android:paddingLeft="2dp"
                    android:text="&gt;&gt;" />
            </LinearLayout>
        </LinearLayout>

        <include
            layout="@layout/modal_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</layout>